# i2am_paris_validation

./: pyproject.toml
i2am_paris_validation/validation/: data_structure.py
