[tool.poetry]
name = "i2am-paris-validation"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
streamlit = "^1.31.0"
streamlit-extras = "^0.4.0"
watchdog = "^4.0.0"
pandas = "^2.2.0"
openpyxl = "^3.1.2"
pyam-iamc = "^2.1.0"
nomenclature-iamc = "^0.15.0"

[tool.poetry.group.dev.dependencies]
ipython = "^8.21.0"
ipykernel = "^6.29.2"
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
